[tool.poetry]
name = "fcc-medical-data-visualizer"
version = "1.0.0"
description = "A Python program to visualize and make calculations from medical examination data."
authors = ["Arvindran Kalidas <arvindrankalidas@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
seaborn = "^0.13.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[tool.black]
line-length = 120
target-version=['py310']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
